err
In file included from cuda-sim.h:37:0,
                 from cuda-sim.cc:30:
../gpgpu-sim/shader.h: In constructor 'scheduler_unit::scheduler_unit(shader_core_stats*, shader_core_ctx*, Scoreboard*, simt_stack**, std::vector<shd_warp_t*>*, register_set*, register_set*, register_set*, register_set*, register_set*, std::vector<register_set*>&, register_set*, int)':
../gpgpu-sim/shader.h:433:32: warning: 'scheduler_unit::m_spec_cores_out' will be initialized after [-Wreorder]
   std::vector<register_set *> &m_spec_cores_out;
                                ^~~~~~~~~~~~~~~~
../gpgpu-sim/shader.h:432:17: warning:   'register_set* scheduler_unit::m_mem_out' [-Wreorder]
   register_set *m_mem_out;
                 ^~~~~~~~~
../gpgpu-sim/shader.h:332:3: warning:   when initialized here [-Wreorder]
   scheduler_unit(shader_core_stats *stats, shader_core_ctx *shader,
   ^~~~~~~~~~~~~~
cuda-sim.cc: In member function 'void function_info::ptx_jit_config(std::map<long long unsigned int, long unsigned int>, memory_space*, gpgpu_t*, dim3, dim3)':
cuda-sim.cc:1466:3: warning: NULL used in arithmetic [-Wpointer-arith]
   assert(system(buff) != NULL);
   ^~~~~~
cuda-sim.cc:1468:24: warning: ignoring return value of 'char* fgets(char*, int, FILE*)', declared with attribute warn_unused_result [-Wunused-result]
   fgets(buff, 1024, fp);
                        ^
In file included from abstract_hardware_model.h:185:0,
                 from gpgpusim_entrypoint.h:35,
                 from gpgpusim_entrypoint.cc:29:
stream_manager.h: In member function 'bool CUevent_st::done() const':
stream_manager.h:67:40: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   bool done() const { return m_updates == m_issued; }
                              ~~~~~~~~~~^~~~~~~~~~~
In file included from ../libcuda/../src/cuda-sim/cuda-sim.h:37:0,
                 from ../libcuda/gpgpu_context.h:3,
                 from gpgpusim_entrypoint.cc:32:
../libcuda/../src/cuda-sim/../gpgpu-sim/shader.h: In constructor 'scheduler_unit::scheduler_unit(shader_core_stats*, shader_core_ctx*, Scoreboard*, simt_stack**, std::vector<shd_warp_t*>*, register_set*, register_set*, register_set*, register_set*, register_set*, std::vector<register_set*>&, register_set*, int)':
../libcuda/../src/cuda-sim/../gpgpu-sim/shader.h:433:32: warning: 'scheduler_unit::m_spec_cores_out' will be initialized after [-Wreorder]
   std::vector<register_set *> &m_spec_cores_out;
                                ^~~~~~~~~~~~~~~~
../libcuda/../src/cuda-sim/../gpgpu-sim/shader.h:432:17: warning:   'register_set* scheduler_unit::m_mem_out' [-Wreorder]
   register_set *m_mem_out;
                 ^~~~~~~~~
../libcuda/../src/cuda-sim/../gpgpu-sim/shader.h:332:3: warning:   when initialized here [-Wreorder]
   scheduler_unit(shader_core_stats *stats, shader_core_ctx *shader,
   ^~~~~~~~~~~~~~
../libcuda/../src/cuda-sim/../gpgpu-sim/shader.h: In member function 'virtual bool specialized_unit::can_issue(const warp_inst_t&) const':
../libcuda/../src/cuda-sim/../gpgpu-sim/shader.h:1238:17: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     if (inst.op != m_supported_op) {
         ~~~~~~~~^~~~~~~~~~~~~~~~~
gpgpusim_entrypoint.cc: In function 'void* gpgpu_sim_thread_concurrent(void*)':
gpgpusim_entrypoint.cc:120:5: error: expected primary-expression before ')' token
     )
     ^
make[1]: *** [/u/ishitac/gpgpusim-codes/lucas_fast/gpgpu-sim_distribution/build/gcc-6.5.0/cuda-9010/release/gpgpusim_entrypoint.o] Error 1
make: *** [gpgpusimlib] Error 2
